Realize RequestPropertyDefinitions processing